--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,15 @@
 ---
 layout: default
+published: true
 ---
 
 <article class="page">
 
   <h1>{{ page.title }}</h1>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+  </script>
+  
   <div class="entry">
     {{ content }}
   </div>
