--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
+published: true
 ---
-
 <article class="post">
   <h1>{{ page.title }}</h1>
 
@@ -9,6 +9,9 @@ layout: default
     {{ content }}
   </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+  </script>
+  
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
