--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,8 +8,9 @@ published: true
   <div class="entry">
     {{ content }}
   </div>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+  
+  <!-- mathjax -->
+  <script type="text/javascript" src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
   
   <div class="date">
